# bah2026-ps7

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  idea.md  pyproject.toml  requirements-core.txt  requirements-optional.txt
.github/workflows/: ci.yml  deploy.yml
app/: dashboard.py
configs/: default.yaml
docker/: entrypoint.sh
examples/: README.md  example_catalog.csv  example_report.md
report/: template.md
research/: 01_data_multimission.md  02_detection_detrending.md  03_classification_vetting.md  04_parameter_estimation_uncertainty.md  05_performance_architecture.md  06_visualization_reporting.md
scripts/: make_examples.py  train_classifier.py  train_demo_classifier.py
src/exopipe/: __init__.py  cache.py  catalog.py  cli.py  config.py  detrend.py  driver.py  features.py  fit.py  index.py  pipeline.py  report.py  search.py  significance.py  types.py  utils.py  vetting.py  viz.py
src/exopipe/classify/: __init__.py  cnn.py  ensemble.py  ml.py  rules.py
src/exopipe/data/: __init__.py  lightcurve.py  loaders.py  synthetic.py
src/exopipe/model/: __init__.py  transit.py
tests/: __init__.py  test_catalog_viz.py  test_classify.py  test_detrend.py  test_fit.py  test_foundation.py  test_pipeline_e2e.py  test_search.py  test_vetting.py
